// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/esy/extract extractPackageFile() parses a simple JSON object 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "*",
      "datasource": "opam",
      "depName": "@opam/dune",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "opam",
      "depName": "@opam/lambda-term",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "^4.0.0",
      "datasource": "opam",
      "depName": "@opam/lwt",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "~4.6.0",
      "datasource": "npm",
      "depName": "ocaml",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "^3.0.3",
      "datasource": "opam",
      "depName": "@opam/merlin",
      "depType": "devDependencies",
    },
    Object {
      "currentValue": "~4.6.0",
      "datasource": "npm",
      "depName": "ocaml",
      "depType": "devDependencies",
    },
  ],
}
`;

exports[`lib/manager/esy/extract extractPackageFile() parses a simple JSON object 2`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "*",
      "datasource": "opam",
      "depName": "@opam/dune",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "@reason-native/console",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "@reason-native/pastel",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "@reason-native/rely",
      "depType": "dependencies",
    },
    Object {
      "currentValue": ">= 3.4.0 < 3.6.0",
      "datasource": "npm",
      "depName": "@esy-ocaml/reason",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "refmterr",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "~4.6.0",
      "datasource": "npm",
      "depName": "ocaml",
      "depType": "dependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "opam",
      "depName": "@opam/merlin",
      "depType": "devDependencies",
    },
    Object {
      "currentValue": "~4.6.0",
      "datasource": "npm",
      "depName": "ocaml",
      "depType": "devDependencies",
    },
    Object {
      "currentValue": "*",
      "datasource": "opam",
      "depName": "@opam/odoc",
      "depType": "devDependencies",
    },
  ],
}
`;
